Fix links/buttons opacity on IE8

--- a/source_assets/styles/_base.scss
+++ b/source_assets/styles/_base.scss
@@ -36,6 +36,7 @@ a:visited {
 
 a:hover {
   opacity: 0.6;
+  filter: alpha(opacity=60);
   outline: none;
 }
 
